RESOLVED FIXED227535
[iOS] [Live Text] "Text from Camera" should not be shown in callout bar when selecting text
https://bugs.webkit.org/show_bug.cgi?id=227535
Summary [iOS] [Live Text] "Text from Camera" should not be shown in callout bar when ...
Wenson Hsieh
Reported 2021-06-30 09:41:22 PDT
Attachments
Patch (5.07 KB, patch)
2021-06-30 09:48 PDT, Wenson Hsieh
no flags
Wenson Hsieh
Comment 1 2021-06-30 09:48:27 PDT
Devin Rousso
Comment 2 2021-06-30 11:21:58 PDT
Comment on attachment 432606 [details] Patch r=me
Wenson Hsieh
Comment 3 2021-06-30 11:23:16 PDT
Comment on attachment 432606 [details] Patch Thanks for the review!
EWS
Comment 4 2021-06-30 11:26:51 PDT
Committed r279423 (239284@main): <https://commits.webkit.org/239284@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 432606 [details].
Note You need to log in before you can comment on or make changes to this bug.