[iOS] [Live Text] "Text from Camera" should not be shown in callout bar when selecting text https://bugs.webkit.org/show_bug.cgi?id=227535 rdar://79936981

Reviewed by Devin Rousso.

Source/WebKit:

Match new system behavior in rdar://79758142 by not showing the "Text from Camera" item in the callout bar when
the selection is a (non-collapsed) range.

Test: WebKit.CaptureTextFromCamera

* UIProcess/ios/WKContentViewInteraction.mm:
(-[WKContentView canPerformActionForWebView:withSender:]):

Tools:

Add an API test to exercise the change. See WebKit ChangeLog for more detail.

* TestWebKitAPI/Tests/WebKitCocoa/WKContentViewEditingActions.mm:
(canPerformActionWithSender):
(TEST):


Canonical link: https://commits.webkit.org/239284@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@279423 268f45cc-cd09-0410-ab3c-d52691b4dbfc